# Ghosty

./: .gitignore  README.md  fix_install.sh  ghosty.desktop  gui.py  install.sh  macchanger.py  main.py  make_executable.bat  pyproject.toml  requirements.txt  run_ghosty.sh  setup.py  tor.py  utils.py  vpn.py
.github/workflows/: ci.yml
src/ghosty/: __init__.py  __main__.py  app.py  config.py  logger.py
src/ghosty/core/: __init__.py  mac.py  orchestrator.py  tor.py  vpn.py
src/ghosty/gui/: __init__.py  control_panel.py  interface_panel.py  log_panel.py  main_window.py  mode_panel.py  settings_dialog.py  status_panel.py  vpn_panel.py
src/ghosty/utils/: __init__.py  network.py  platform.py  process.py
tests/: conftest.py  test_config.py  test_mac.py  test_network.py  test_tor.py  test_vpn.py
