[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghosty"
version = "2.0.0"
description = "Linux Anonymizer — MAC spoofing, VPN, and TOR with a modern GUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Prem Kumar Sah" },
]
keywords = ["anonymizer", "privacy", "tor", "vpn", "mac", "security", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "customtkinter>=5.2.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "stem>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
ghosty = "ghosty.__main__:main"

[project.gui-scripts]
ghosty-gui = "ghosty.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ghosty"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
